--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mcb-ui",
-  "version": "1.0.0",
+  "version": "1.0.26-proto",
   "description": "A recreation of Minecraft Bedrock's new UI system for React",
   "author": "Barxilly",
   "license": "UNLICENSED",
+  "repository": "https://github.com/Barxilly/mcb-ui",
+  "type": "module",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc && babel src --out-dir dist --extensions \".ts,.tsx\"",
+    "build": "tsc && rollup -c && node css-build.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -16,12 +18,11 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
     "@chromatic-com/storybook": "^3.2.5",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@storybook/addon-essentials": "^8.6.2",
     "@storybook/addon-interactions": "^8.6.2",
     "@storybook/addon-onboarding": "^8.6.2",
@@ -30,7 +31,18 @@
     "@storybook/react-vite": "^8.6.2",
     "@storybook/test": "^8.6.2",
     "@types/react": "^19.0.10",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
+    "fs-extra": "^11.3.0",
+    "rollup": "^2.56.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "storybook": "^8.6.2",
+    "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
