--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "lib": ["dom", "es2015"],
+    "target": "ES6",
+    "module": "ESNext",
+    "lib": ["dom", "es2017"],
     "jsx": "react",
     "declaration": true,
+    "declarationDir": "./dist/types",
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node"
   },
-  "include": ["src"]
+  "include": ["src", "src/assets/*.mp3", "src/assets/click.mp3.d.ts"]
 }
