--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcb-ui",
-  "version": "1.0.26-proto",
+  "version": "1.0.31-proto",
   "description": "A recreation of Minecraft Bedrock's new UI system for React",
   "author": "Barxilly",
   "license": "UNLICENSED",
@@ -32,6 +32,7 @@
     "@storybook/test": "^8.6.2",
     "@types/react": "^19.0.10",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "cssnano": "^7.0.6",
     "fs-extra": "^11.3.0",
     "rollup": "^2.56.3",
@@ -42,10 +43,13 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "storybook": "^8.6.2",
+    "tailwind-merge": "^3.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
+    "react-chartjs-2": "^5.3.0",
     "vite": "^6.2.0"
   }
 }
