--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": "./",
+    "paths": {
+      "#/*": ["src/*"]
+    }
   },
   "include": ["src", "src/assets/*.mp3", "src/assets/click.mp3.d.ts"]
 }
