--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcb-ui",
-  "version": "1.0.31-proto",
+  "version": "1.0.38-proto",
   "description": "A recreation of Minecraft Bedrock's new UI system for React",
   "author": "Barxilly",
   "license": "UNLICENSED",
@@ -50,6 +50,8 @@
   "dependencies": {
     "chart.js": "^4.4.8",
     "react-chartjs-2": "^5.3.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "@mantine/core": "^6.0.0",
+    "@mantine/hooks": "^6.0.0"
   }
 }
