--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcb-ui",
-  "version": "1.0.38-proto",
+  "version": "1.2.1-proto",
   "description": "A recreation of Minecraft Bedrock's new UI system for React",
   "author": "Barxilly",
   "license": "UNLICENSED",
@@ -48,10 +48,13 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "chart.js": "^4.4.8",
-    "react-chartjs-2": "^5.3.0",
-    "vite": "^6.2.0",
     "@mantine/core": "^6.0.0",
-    "@mantine/hooks": "^6.0.0"
+    "@mantine/hooks": "^6.0.0",
+    "chart.js": "^4.4.8",
+    "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
+    "vite": "^6.2.0"
   }
 }
